Converted dynanic properties to use ExtraPropertiesExtension in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,10 @@ task listJars << {
 task updateLaunchScript {
      description = 'Update the launch script that gets called from cron'
      group = 'build'
-     launchScriptDir = file('build/libs')
-     launchScriptFile = file('build/libs/runGaussTrader.sh')
-
+     ext {
+     	 launchScriptDir = file('build/libs')
+     	 launchScriptFile = file('build/libs/runGaussTrader.sh')
+     }    
      doLast {
      	 launchScriptFile.write('#! /bin/sh\n')
 	 launchScriptFile.append('JAR_DIR=')
