Broke up Portfolio.exerciseOption() into units. Wrote unit test for exercising short put option.

--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,8 @@ test {
     testLogging {
     	events 'passed'
     }
-    include 'net/toddsarratt/GaussTrader/CashFlowTestForNewOrder**'
+    include 'net/toddsarratt/GaussTrader/PortfolioExerciseShortPut**'
+    exclude 'net/toddsarratt/GaussTrader/CashFlowTestForNewOrder**'
     exclude 'net/toddsarratt/GaussTrader/DBHistoricalPricesConnectionTest**'
     exclude 'net/toddsarratt/GaussTrader/ClaimAgainstCashTest**'
     exclude 'net/toddsarratt/GaussTrader/OptionTickerAndExpiryGeneration**'
