Wrote unit test for exercising an ITM short call option and beat it to death. Finally got it working.

--- a/build.gradle
+++ b/build.gradle
@@ -65,8 +65,10 @@ test {
     useTestNG()
     testLogging {
     	events 'passed'
+	showStandardStreams = true
     }
-    include 'net/toddsarratt/GaussTrader/PortfolioExerciseShortPut**'
+    exclude 'net/toddsarratt/GaussTrader/PortfolioExerciseShortPut**'
+    include 'net/toddsarratt/GaussTrader/PortfolioExerciseShortCall**'
     exclude 'net/toddsarratt/GaussTrader/CashFlowTestForNewOrder**'
     exclude 'net/toddsarratt/GaussTrader/DBHistoricalPricesConnectionTest**'
     exclude 'net/toddsarratt/GaussTrader/ClaimAgainstCashTest**'
