Was having trouble with updateLaunchScript running when jar task did not resulting in mismatch between run script and jar filename. Made Groovy correction to build.gradle.

--- a/build.gradle
+++ b/build.gradle
@@ -20,18 +20,20 @@ version = getVersionName()
 mainClassName = "net.toddsarratt.GaussTrader.GaussTrader"
 
 task updateLaunchScript (dependsOn: jar) << {
-     description = 'Update the launch script that gets called from cron'
-     ext {
-         launchScriptDir = file('build/libs')
-         launchScriptFile = file('build/libs/runGaussTrader.sh')
-     }
-     launchScriptFile.write('#! /bin/sh\n')
-     launchScriptFile.append('JAR_DIR=')
-     launchScriptFile.append(launchScriptDir.absolutePath)
-     launchScriptFile.append('/\n\n')
-     launchScriptFile.append('java -jar ${JAR_DIR}GaussTrader-')
-     launchScriptFile.append(version)
-     launchScriptFile.append('.jar > /dev/null\n')
+    if(dependsOnTaskDidWork()) {
+        description = 'Update the launch script that gets called from cron'
+        ext {
+     	    launchScriptDir = file('build/libs')
+            launchScriptFile = file('build/libs/runGaussTrader.sh')
+     	}
+     	launchScriptFile.write('#! /bin/sh\n')
+     	launchScriptFile.append('JAR_DIR=')
+	launchScriptFile.append(launchScriptDir.absolutePath)
+	launchScriptFile.append('/\n\n')
+     	launchScriptFile.append('java -jar ${JAR_DIR}GaussTrader-')
+     	launchScriptFile.append(version)
+     	launchScriptFile.append('.jar > /dev/null\n')
+    }
 }
 
 repositories {
