--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,11 @@ def getVersionName = { ->
 version = getVersionName()
 mainClassName = "net.toddsarratt.GaussTrader.GaussTrader"
 
-task updateLaunchScript (dependsOn: jar) << {
-    if(dependsOnTaskDidWork()) {
+task updateLaunchScript (dependsOn: jar) {
+    onlyIf {
+        dependsOnTaskDidWork()
+    }
+    doFirst {
         description = 'Update the launch script that gets called from cron'
         ext {
      	    launchScriptDir = file('build/libs')
