Expiration Saturday is not the third Saturday of the month. It is the Saturday following the third Friday of the month. Fixed Option.getExpirySaturday(), then deprecated it to Option.calculateFutureExpiry() which checks to see if the third Friday falls on a holiday. Which I don't know how to test against since I can't find it happening, at least I got bored looking when I hit 2020.

--- a/build.gradle
+++ b/build.gradle
@@ -73,9 +73,10 @@ test {
     	events 'passed'
 	showStandardStreams = true
     }
-    include 'net/toddsarratt/GaussTrader/PortfolioExerciseLongPut**'
-    include 'net/toddsarratt/GaussTrader/PortfolioExerciseShortPut**'
-    include 'net/toddsarratt/GaussTrader/PortfolioExerciseShortCall**'
+    include 'net/toddsarratt/GaussTrader/OptionExpiryTest**'
+    exclude 'net/toddsarratt/GaussTrader/PortfolioExerciseLongPut**'
+    exclude 'net/toddsarratt/GaussTrader/PortfolioExerciseShortPut**'
+    exclude 'net/toddsarratt/GaussTrader/PortfolioExerciseShortCall**'
     exclude 'net/toddsarratt/GaussTrader/CashFlowTestForNewOrder**'
     exclude 'net/toddsarratt/GaussTrader/DBHistoricalPricesConnectionTest**'
     exclude 'net/toddsarratt/GaussTrader/ClaimAgainstCashTest**'
