Added DateTimeZone.forID(America/New_York) to all constructors where appropriate, including DateTime(MutableDateTime, TZ) just to keep things very consistant. Only DateTime constructors without a NY TZ argument are in TradingSession.marketIsOpenToday() and used to display the date in DEBUG logs.

--- a/build.gradle
+++ b/build.gradle
@@ -62,9 +62,12 @@ configure(updateLaunchScript) {
 }
 
 task listJars << {
-    description = 'Lists dependency jars'
-    group = 'Build'
     configurations.compile.each { File file -> println file.name }
+}
+
+configure(listJars) {
+    group = 'Build'
+    description = 'Lists dependency jars'
 }
 
 test {
