Refactor of Option class. Created Put and Call sub-classes and Enum SecurityType.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,9 +8,9 @@ DB_IP=localhost
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=b3llcurv38
-# Number of times to retry Yahoo connections
+# Number with times to retry Yahoo connections
 YAHOO_RETRIES=5
-# How big a % of the portfolio can a stock occupy?
+# How big a % with the portfolio can a stock occupy?
 STOCK_PCT_OF_PORTFOLIO=10.0;
 # Default value for new portfolio
 STARTING_CASH = BigDecimal.valueOf(1_000_000.00);
