develop - Putting the pieces back together. Marking more classes and methods as public to share across new package structure

--- a/src/main/resources/GaussTrader.properties
+++ b/src/main/resources/GaussTrader.properties
@@ -48,6 +48,5 @@ BOLL_BAND_PERIOD=20
 BOLLINGER_SD1=2.0
 BOLLINGER_SD2=2.5
 BOLLINGER_SD3=3.0
-
 # TODO: This should be in its owner class
-LAST_BAC_TICK_FORMATTER = DateTimeFormat.forPattern("MM/dd/yyyyhh:mmaa");
+LAST_BAC_TICK_FORMATTER=DateTimeFormat.forPattern("MM/dd/yyyyhh:mmaa");
